FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Theme__c.object
<CustomObject>
    <fields>
        <fullName>agf__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional relationship with a scrum team so teams can organize their themes</description>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Themes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Theme_Rank__c</fullName>
        <label>Theme Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Theme</label>
    <listViews>
        <fullName>agf__ADMThemes</fullName>
        <columns>NAME</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>ADM</value>
        </filters>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>ADM Team</value>
        </filters>
        <label>ADM Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__Agent_Console_2_0_Themes</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Agent Console 2.0</value>
        </filters>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>CSS UI</value>
        </filters>
        <label>Agent Console 2.0 Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__AppStoreThemes</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>agf__Scrum_Team__c</columns>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Theme_Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Opportunity to Quote,Order to Cash,Webstore</value>
        </filters>
        <label>AppStore Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__ClientEngineering</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CE:</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DSW</value>
        </filters>
        <label>Client Engineering</label>
    </listViews>
    <listViews>
        <fullName>agf__Dreamforce_App_Themes</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>agf__Theme_Rank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Dreamforce App</value>
        </filters>
        <label>Dreamforce App Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__FinSrv146WMV4</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Yerkes,Abramowitz</value>
        </filters>
        <label>FinSrv 146.WM.V4</label>
    </listViews>
    <listViews>
        <fullName>agf__GUSTeamThemes</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>GUS</value>
        </filters>
        <label>GUS Team Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__IDE</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Theme_Rank__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>IDE</value>
        </filters>
        <label>IDE</label>
    </listViews>
    <listViews>
        <fullName>agf__MonitoringandManagement</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>M&amp;M</value>
        </filters>
        <label>Monitoring and Management</label>
    </listViews>
    <listViews>
        <fullName>agf__Oppty2Quote_Themes</fullName>
        <columns>agf__Theme_Rank__c</columns>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Opportunity to Quote</value>
        </filters>
        <label>Oppty2Quote Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__Profiles_and_Feeds</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Profiles and Feeds</value>
        </filters>
        <label>Profiles and Feeds</label>
    </listViews>
    <listViews>
        <fullName>agf__ScrumRolloutTeamThemes</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SRT</value>
        </filters>
        <label>Scrum Rollout Team Themes</label>
    </listViews>
    <listViews>
        <fullName>agf__UpgradeandPackaging</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PKG</value>
        </filters>
        <label>Upgrade and Packaging</label>
    </listViews>
    <listViews>
        <fullName>agf__Web_Development</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>Web Development</value>
        </filters>
        <label>Web Development</label>
    </listViews>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Scrum_Team_Is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Scrum_Team__r.agf__Active__c = false</errorConditionFormula>
        <errorMessage>The scrum team you selected is not active.</errorMessage>
    </validationRules>
</CustomObject>